--- a/_modules/services/link_resolver.html
+++ b/_modules/services/link_resolver.html
@@ -391,7 +391,7 @@
         <span class="n">broken</span> <span class="o">=</span> <span class="p">[]</span>
 
         <span class="k">for</span> <span class="n">candidate</span> <span class="ow">in</span> <span class="n">candidates</span><span class="p">:</span>
-            <span class="k">if</span> <span class="n">candidate</span><span class="o">.</span><span class="n">is_id_based</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">candidate</span><span class="o">.</span><span class="n">is_id_based</span> <span class="ow">and</span> <span class="n">candidate</span><span class="o">.</span><span class="n">target_id</span><span class="p">:</span>
                 <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">resolve</span><span class="p">(</span><span class="n">candidate</span><span class="o">.</span><span class="n">target_id</span><span class="p">)</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
                     <span class="n">broken</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">candidate</span><span class="o">.</span><span class="n">target_id</span><span class="p">)</span>
 
