--- a/genindex.html
+++ b/genindex.html
@@ -703,6 +703,8 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.db_service.DatabaseService.get_active_calendar_config">get_active_calendar_config() (services.db_service.DatabaseService method)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_active_tags">get_active_tags() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="services.html#services.db_service.DatabaseService.get_all_calendar_configs">get_all_calendar_configs() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_all_entities">get_all_entities() (services.db_service.DatabaseService method)</a>
