--- a/genindex.html
+++ b/genindex.html
@@ -391,6 +391,8 @@
 </li>
         <li><a href="core.html#core.calendar.CalendarDate">CalendarDate (class in core.calendar)</a>
 </li>
+        <li><a href="services.html#services.worker.DatabaseWorker.cleanup">cleanup() (services.worker.DatabaseWorker method)</a>
+</li>
         <li><a href="services.html#services.db_service.DatabaseService.clear_timeline_grouping_config">clear_timeline_grouping_config() (services.db_service.DatabaseService method)</a>
 </li>
         <li>
@@ -1140,6 +1142,8 @@
         <li><a href="commands.html#commands.calendar_commands.SetActiveCalendarCommand">SetActiveCalendarCommand (class in commands.calendar_commands)</a>
 </li>
         <li><a href="core.html#core.logging_config.setup_logging">setup_logging() (in module core.logging_config)</a>
+</li>
+        <li><a href="core.html#core.logging_config.shutdown_logging">shutdown_logging() (in module core.logging_config)</a>
 </li>
         <li><a href="services.html#id4">span (services.text_parser.LinkCandidate attribute)</a>, <a href="services.html#services.text_parser.LinkCandidate.span">[1]</a>
 </li>
